--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,12 @@
-# Ignore compiled files
-*.class
-*.o
-*.pyc
-
 # Ignore build output
 build/
 dist/
 
 # Ignore IDE and editor files
-.idea/
 .vscode/
-*.sublime-project
-*.sublime-workspace
 
 # Ignore system files
 .DS_Store
-Thumbs.db
 
 # Ignore log files
 *.log
@@ -23,3 +14,36 @@ Thumbs.db
 # Ignore dependencies
 */node_modules/**
 */.venv/**
+*/.next/**
+
+/.pnp
+.pnp.js
+.yarn/install-state.gz
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
