--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ aiohttp==3.9.5
 aiosignal==1.3.1
 appdirs==1.4.4
 attrs==23.2.0
+beautifulsoup4==4.12.3
 blinker==1.8.2
 certifi==2024.2.2
 charset-normalizer==3.3.2
@@ -17,8 +18,10 @@ ephem==4.1.5
 Flask==3.0.3
 Flask-Cors==4.0.1
 fonttools==4.52.1
+frozendict==2.4.4
 frozenlist==1.4.1
 holidays==0.49
+html5lib==1.1
 httpstan==4.12.0
 idna==3.7
 importlib_resources==6.4.0
@@ -26,15 +29,20 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 kiwisolver==1.4.5
 LunarCalendar==0.0.9
+lxml==5.2.2
 MarkupSafe==2.1.5
 marshmallow==3.21.2
 matplotlib==3.9.0
 multidict==6.0.5
+multitasking==0.0.11
 numpy==1.26.4
 packaging==24.0
 pandas==2.2.2
 pastel==0.2.1
+peewee==3.17.5
 pillow==10.3.0
+platformdirs==4.2.2
+plotly==5.22.0
 prophet==1.1.5
 pylev==1.4.0
 PyMeeus==0.5.12
@@ -47,10 +55,14 @@ redis==5.0.4
 requests==2.32.2
 setuptools-git==1.2
 six==1.16.0
+soupsieve==2.5
 stanio==0.5.0
+tenacity==8.3.0
 tqdm==4.66.4
 tzdata==2024.1
 urllib3==2.2.1
 webargs==8.4.0
+webencodings==0.5.1
 Werkzeug==3.0.3
 yarl==1.9.4
+yfinance==0.2.40
