--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/lodash": "^4.17.4",
+    "@types/lodash.debounce": "^4.0.9",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "chartjs-adapter-date-fns": "^3.0.0",
     "date-fns": "^3.6.0",
+    "lodash": "^4.17.21",
     "next": "14.2.3",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
