--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/lodash": "^4.17.4",
     "@types/lodash.debounce": "^4.0.9",
+    "@types/react-datepicker": "^6.2.0",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "chartjs-adapter-date-fns": "^3.0.0",
@@ -19,6 +20,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18"
   },
   "devDependencies": {
