--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -38,6 +38,7 @@ multitasking==0.0.11
 numpy==1.26.4
 packaging==24.0
 pandas==2.2.2
+pandas_ta==0.3.14b0
 pastel==0.2.1
 peewee==3.17.5
 pillow==10.3.0
