--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^3.6.0",
     "lodash": "^4.17.21",
     "next": "14.2.3",
+    "qs": "^6.12.1",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.9.0",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/chart.js": "^2.9.41",
     "@types/node": "^20",
+    "@types/qs": "^6.9.15",
     "@types/react": "^18",
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^18",
