--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,6 +17,7 @@ Cython==3.0.10
 ephem==4.1.5
 Flask==3.0.3
 Flask-Cors==4.0.1
+flask-talisman==1.1.0
 fonttools==4.52.1
 frozendict==2.4.4
 frozenlist==1.4.1
