--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -18,4 +18,5 @@ COPY . .
 EXPOSE 3000
 
 # Run the app when the container launches
-CMD ["npm", "run", "dev"]
+# CMD ["npm", "run", "dev"] # Use for dev only
+CMD ["npm", "run", "build" "&&", "npm", "run", "start"]
